force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Project is the primary container that is used to define work within the system. Project is related to Program, Cycle, Job, Project Account, Project Location, Project Service, and Project Type.</description>
    <label>Project</label>
    <nameField>
        <label>Project Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>