force-app/main/default/objects/Project__c/fields/AccountSplitSUM__c.field-meta.xml
<CustomField>
    <fullName>AccountSplitSUM__c</fullName>
    <label>Sum Of Account Split</label>
    <summarizedField>ProjectAccount__c.SplitValue__c</summarizedField>
    <summaryForeignKey>ProjectAccount__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>