force-app/main/default/objects/Project__c/fields/AddLocationsLeadTime__c.field-meta.xml
<CustomField>
    <fullName>AddLocationsLeadTime__c</fullName>
    <formula>ProjectType__r.AddLocationsLeadTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddLocationsLeadTime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>