force-app/main/default/objects/Project__c/fields/AllowedRescheduleDates__c.field-meta.xml
<CustomField>
    <fullName>AllowedRescheduleDates__c</fullName>
    <label>Allowed Reschedule Dates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>