force-app/main/default/objects/Project__c/fields/AllowReattempt__c.field-meta.xml
<CustomField>
    <fullName>AllowReattempt__c</fullName>
    <formula>ProjectType__r.AllowReattempt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Reattempt</label>
    <type>Checkbox</type>
</CustomField>