force-app/main/default/objects/Project__c/fields/ApexJobName__c.field-meta.xml
<CustomField>
    <fullName>ApexJobName__c</fullName>
    <description>A field that indicates the apex job name of the Project.</description>
    <inlineHelpText>The apex job name of the project</inlineHelpText>
    <label>ApexJobName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>