force-app/main/default/objects/Project__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>A picklist that indicates whether the Project is approved or rejected.</description>
    <inlineHelpText>Indicates whether the project is approved or rejected.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>