force-app/main/default/objects/Project__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <description>A field that indicates the date and time that the Project was approved.</description>
    <inlineHelpText>The date and time that the project was approved.</inlineHelpText>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>