force-app/main/default/objects/Project__c/fields/ApprovalRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequestDate__c</fullName>
    <description>A field that indicates the date and time the Project was last submitted for approval.</description>
    <inlineHelpText>Date and time the project was last submitted for approval.</inlineHelpText>
    <label>Approval Request Date</label>
    <type>DateTime</type>
</CustomField>