force-app/main/default/objects/Project__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A search field that indicates the user who approved the Project.</description>
    <inlineHelpText>Select the name of the person who will approve the project..</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>