force-app/main/default/objects/Project__c/fields/ArchiveStatus__c.field-meta.xml
<CustomField>
    <fullName>ArchiveStatus__c</fullName>
    <label>Archive Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>