force-app/main/default/objects/Project__c/fields/BatchProcessId__c.field-meta.xml
<CustomField>
    <fullName>BatchProcessId__c</fullName>
    <description>A field that indicates the ID number of the Batch Process for the Project.</description>
    <inlineHelpText>The ID number for the batch process.</inlineHelpText>
    <label>BatchProcessId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>