force-app/main/default/objects/Project__c/fields/BookBudgetedOnly__c.field-meta.xml
<CustomField>
    <fullName>BookBudgetedOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates whether the Project was book budgeted only.</description>
    <inlineHelpText>If selected, the project was book budgeted only.</inlineHelpText>
    <label>BookBudgetedOnly</label>
    <type>Checkbox</type>
</CustomField>