force-app/main/default/objects/Project__c/fields/BookedProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>BookedProjectEndDate__c</fullName>
    <description>A field that indicates the Project End Date when the project was moved to Booked State.</description>
    <inlineHelpText>The project end date when the project was booked</inlineHelpText>
    <label>Booked Project End Date</label>
    <type>Date</type>
</CustomField>