force-app/main/default/objects/Project__c/fields/BookedProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>BookedProjectStartDate__c</fullName>
    <description>A field that indicates the Project Start Date when the project was moved to Booked State.</description>
    <inlineHelpText>The date available to start execution</inlineHelpText>
    <label>Booked Project Start Date</label>
    <type>Date</type>
</CustomField>