force-app/main/default/objects/Project__c/fields/BudgetedLocationsCount__c.field-meta.xml
<CustomField>
    <fullName>BudgetedLocationsCount__c</fullName>
    <description>An entry field that indicates the number of budgeted locations for the Project.</description>
    <inlineHelpText>Expected number of locations</inlineHelpText>
    <label>Budgeted Locations Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>