force-app/main/default/objects/Project__c/fields/BundleServices__c.field-meta.xml
<CustomField>
    <fullName>BundleServices__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To bundle services with in the project for a specific location</description>
    <label>Bundle Services</label>
    <type>Checkbox</type>
</CustomField>