force-app/main/default/objects/Project__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <description>A picklist that indicates reasons that the project was canceled.</description>
    <inlineHelpText>Select the reason the project was canceled.</inlineHelpText>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier Requested</fullName>
            </value>
            <value>
                <fullName>Retailer Requested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Item not approved</fullName>
                <isActive>false</isActive>
                <label>Item not approved</label>
            </value>
            <value>
                <fullName>No Capacity</fullName>
                <isActive>false</isActive>
                <label>No Capacity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>