force-app/main/default/objects/Project__c/fields/CancelReasonComment__c.field-meta.xml
<CustomField>
    <fullName>CancelReasonComment__c</fullName>
    <description>An entry field that indicates the reason(s) the Project was canceled.</description>
    <inlineHelpText>Enter the reason(s) the project was canceled.</inlineHelpText>
    <label>Cancel Reason Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>