force-app/main/default/objects/Project__c/fields/ClonedFromProject__c.field-meta.xml
<CustomField>
    <fullName>ClonedFromProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Projects (Cloned From Project)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>