force-app/main/default/objects/Project__c/fields/CloneStatus__c.field-meta.xml
<CustomField>
    <fullName>CloneStatus__c</fullName>
    <description>Started,Complete</description>
    <label>Clone Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>