force-app/main/default/objects/Project__c/fields/DateLaunched__c.field-meta.xml
<CustomField>
    <fullName>DateLaunched__c</fullName>
    <label>Date Launched</label>
    <type>DateTime</type>
</CustomField>