force-app/main/default/objects/Project__c/fields/DateLocationsScheduled__c.field-meta.xml
<CustomField>
    <fullName>DateLocationsScheduled__c</fullName>
    <label>DateLocationsScheduled</label>
    <type>DateTime</type>
</CustomField>