force-app/main/default/objects/Project__c/fields/DateReleaseChangesRequested__c.field-meta.xml
<CustomField>
    <fullName>DateReleaseChangesRequested__c</fullName>
    <label>Date Release Changes Requested</label>
    <type>DateTime</type>
</CustomField>