force-app/main/default/objects/Project__c/fields/DaysSinceApprovalRequestCount__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceApprovalRequestCount__c</fullName>
    <description>A field that indicates the number of days since the Project was approved..</description>
    <formula>DATEVALUE(ApprovalRequestDate__c) -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days since the project was approved</inlineHelpText>
    <label># Days Since Approval Request Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>