force-app/main/default/objects/Project__c/fields/DetailReportURL__c.field-meta.xml
<CustomField>
    <fullName>DetailReportURL__c</fullName>
    <label>Detail Report URL</label>
    <type>Url</type>
</CustomField>