force-app/main/default/objects/Project__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>860-Sams Club Events</fullName>
            </value>
            <value>
                <fullName>850-Walmart Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>