force-app/main/default/objects/Project__c/fields/EfficiencyMinutes__c.field-meta.xml
<CustomField>
    <fullName>EfficiencyMinutes__c</fullName>
    <formula>IF(ISBLANK(EfficiencyMinutesOverride__c), EfficiencyMinutesCalculated__c, EfficiencyMinutesOverride__c)</formula>
    <label>Efficiency Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>