force-app/main/default/objects/Project__c/fields/EfficiencyMinutesCalculated__c.field-meta.xml
<CustomField>
    <fullName>EfficiencyMinutesCalculated__c</fullName>
    <label>Efficiency Minutes Calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>