force-app/main/default/objects/Project__c/fields/EfficiencyMinutesOverride__c.field-meta.xml
<CustomField>
    <fullName>EfficiencyMinutesOverride__c</fullName>
    <label>Efficiency Minutes Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>