force-app/main/default/objects/Project__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>An entry field that indicates the end date of the Project.</description>
    <inlineHelpText>The last date available to complete execution</inlineHelpText>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>