force-app/main/default/objects/Project__c/fields/EstimatedMinutesCalculated__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMinutesCalculated__c</fullName>
    <formula>IF (OR(StoreCallTimeLimit__c == 0, ISBLANK(StoreCallTimeLimit__c)),  TotalEstimatedMinutes__c, StoreCallTimeLimit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Minutes Calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>