force-app/main/default/objects/Project__c/fields/ExecutionSLA__c.field-meta.xml
<CustomField>
    <fullName>ExecutionSLA__c</fullName>
    <description>A field that indicates the percentage of SLA execution for the Project.</description>
    <inlineHelpText>The service level agreement (SLA) approval percentage.</inlineHelpText>
    <label>Execution SLA %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>