force-app/main/default/objects/Project__c/fields/ExternalDetailReportURL__c.field-meta.xml
<CustomField>
    <fullName>ExternalDetailReportURL__c</fullName>
    <label>External Detail Report URL</label>
    <type>Url</type>
</CustomField>