force-app/main/default/objects/Project__c/fields/ExternalProjectId__c.field-meta.xml
<CustomField>
    <fullName>ExternalProjectId__c</fullName>
    <description>A field that indicates the external ID number for the Project.</description>
    <label>External Project Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>