force-app/main/default/objects/Project__c/fields/FulfillmentLeadTime__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentLeadTime__c</fullName>
    <description>A field that indicates the lead time for fulfillment of the Project.</description>
    <formula>Retailer__r.FulfillmentLeadTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The lead time for fulfillment of the project.</inlineHelpText>
    <label>Fulfillment Lead Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>