force-app/main/default/objects/Project__c/fields/IsCreatedFromOpportunity__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedFromOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created From Opportunity</label>
    <type>Checkbox</type>
</CustomField>