force-app/main/default/objects/Project__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates that the Project is deleted.</description>
    <inlineHelpText>If selected, the project is deleted.</inlineHelpText>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>