force-app/main/default/objects/Project__c/fields/IsExternalProject__c.field-meta.xml
<CustomField>
    <fullName>IsExternalProject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates that the Project is external.</description>
    <inlineHelpText>If selected, the project is external.</inlineHelpText>
    <label>Is External Project</label>
    <type>Checkbox</type>
</CustomField>