force-app/main/default/objects/Project__c/fields/IsGoback__c.field-meta.xml
<CustomField>
    <fullName>IsGoback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates that the Project is a &#39;go-back&#39;.</description>
    <inlineHelpText>If selected, the project is a &#39;go-back&#39;.</inlineHelpText>
    <label>Is Go back</label>
    <type>Checkbox</type>
</CustomField>