force-app/main/default/objects/Project__c/fields/IsJobManualRegenReqd__c.field-meta.xml
<CustomField>
    <fullName>IsJobManualRegenReqd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The check box will be set when a the Job Manual has to be generated.</description>
    <inlineHelpText>The check box will be set when a the Job Manual has to be generated.</inlineHelpText>
    <label>Regenerate Job Manual</label>
    <type>Checkbox</type>
</CustomField>