force-app/main/default/objects/Project__c/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates that the Project is locked</description>
    <inlineHelpText>If selected, the project is locked.</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>