force-app/main/default/objects/Project__c/fields/IsOneHubMobile__c.field-meta.xml
<CustomField>
    <fullName>IsOneHubMobile__c</fullName>
    <formula>ProjectType__r.IsOneHubMobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is OneHub Mobile</label>
    <type>Checkbox</type>
</CustomField>