force-app/main/default/objects/Project__c/fields/IsPendingChangeReleaseRequest__c.field-meta.xml
<CustomField>
    <fullName>IsPendingChangeReleaseRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pending Change Release Requested</label>
    <type>Checkbox</type>
</CustomField>