force-app/main/default/objects/Project__c/fields/IsPendingChanges__c.field-meta.xml
<CustomField>
    <fullName>IsPendingChanges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pending Changes</label>
    <type>Checkbox</type>
</CustomField>