force-app/main/default/objects/Project__c/fields/IsShowProjectSummaryReport__c.field-meta.xml
<CustomField>
    <fullName>IsShowProjectSummaryReport__c</fullName>
    <formula>ProjectType__r.ShowProjectSummaryReport__c</formula>
    <label>IsShow Project Summary Report</label>
    <type>Checkbox</type>
</CustomField>