force-app/main/default/objects/Project__c/fields/IsSingleServiceProject__c.field-meta.xml
<CustomField>
    <fullName>IsSingleServiceProject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Single Service Project</label>
    <type>Checkbox</type>
</CustomField>