force-app/main/default/objects/Project__c/fields/IsSplit__c.field-meta.xml
<CustomField>
    <fullName>IsSplit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that indicates if the project is split among the accounts.</description>
    <inlineHelpText>If selected, the project is split among accounts.</inlineHelpText>
    <label>Is Split</label>
    <type>Checkbox</type>
</CustomField>