force-app/main/default/objects/Project__c/fields/IsVisibleToClient__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleToClient__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls project visibility on client dashboards and reports.</description>
    <inlineHelpText>Select to provide the client visibility to project results, including photos.</inlineHelpText>
    <label>Visible to Client</label>
    <type>Checkbox</type>
</CustomField>