force-app/main/default/objects/Project__c/fields/JobCancelLeadTime__c.field-meta.xml
<CustomField>
    <fullName>JobCancelLeadTime__c</fullName>
    <formula>ProjectType__r.JobCancelLeadTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Cancel Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>