force-app/main/default/objects/Project__c/fields/KeepAssignment__c.field-meta.xml
<CustomField>
    <fullName>KeepAssignment__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select to have the original rep assignment maintained.</inlineHelpText>
    <label>Keep Assignment</label>
    <type>Checkbox</type>
</CustomField>