force-app/main/default/objects/Project__c/fields/LaunchedProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>LaunchedProjectEndDate__c</fullName>
    <description>A field that indicates the Project End Date when the project was moved to Launched State.</description>
    <inlineHelpText>The project end date when the project was launched</inlineHelpText>
    <label>Launched Project End Date</label>
    <type>Date</type>
</CustomField>