force-app/main/default/objects/Project__c/fields/LaunchedProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>LaunchedProjectStartDate__c</fullName>
    <description>A field that indicates the Project Start Date when the project was moved to Launched State.</description>
    <inlineHelpText>The project start date when the project was launched</inlineHelpText>
    <label>Launched Project Start Date</label>
    <type>Date</type>
</CustomField>