force-app/main/default/objects/Project__c/fields/LocationTotalCount__c.field-meta.xml
<CustomField>
    <fullName>LocationTotalCount__c</fullName>
    <description>A field that indicates the count of the locations added to the project.</description>
    <inlineHelpText>The count of the locations added to the project.</inlineHelpText>
    <label>Actual Location Count</label>
    <summaryFilterItems>
        <field>ProjectLocation__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectLocation__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>