force-app/main/default/objects/Project__c/fields/MaxServiceCount__c.field-meta.xml
<CustomField>
    <fullName>MaxServiceCount__c</fullName>
    <description>A field that indicates the maximum number of services for the Project.</description>
    <inlineHelpText>The maximum number of services for the project.</inlineHelpText>
    <label>Max Service Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>