force-app/main/default/objects/Project__c/fields/MinServiceCount__c.field-meta.xml
<CustomField>
    <fullName>MinServiceCount__c</fullName>
    <description>A field that indicates the  minimum number of services for the Project.</description>
    <inlineHelpText>The minimum number of services for the project.</inlineHelpText>
    <label>Min Service Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>