force-app/main/default/objects/Project__c/fields/NumberOfDays__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDays__c</fullName>
    <inlineHelpText>Number of days available to complete project execution at a location</inlineHelpText>
    <label>Number of Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>