force-app/main/default/objects/Project__c/fields/NumberOfJobs__c.field-meta.xml
<CustomField>
    <fullName>NumberOfJobs__c</fullName>
    <label>Number of Jobs</label>
    <summarizedField>ProjectService__c.NumberOfJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>