force-app/main/default/objects/Project__c/fields/NumberofJobsAssigned__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsAssigned__c</fullName>
    <label>Number of Jobs Assigned</label>
    <summarizedField>ProjectService__c.NumberOfAssignedJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>