force-app/main/default/objects/Project__c/fields/NumberofJobsCanceled__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsCanceled__c</fullName>
    <label>Number of Jobs Canceled</label>
    <summarizedField>ProjectService__c.NumberOfCanceledJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>