force-app/main/default/objects/Project__c/fields/NumberofJobsClosed__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsClosed__c</fullName>
    <label>Number of Jobs Closed</label>
    <summarizedField>ProjectService__c.NumberOfClosedJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>