force-app/main/default/objects/Project__c/fields/NumberofJobsCompleted__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsCompleted__c</fullName>
    <label>Number of Jobs Completed</label>
    <summarizedField>ProjectService__c.NumberOfCompletedJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>