force-app/main/default/objects/Project__c/fields/NumberofJobsException__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsException__c</fullName>
    <label>Number of Jobs Exception</label>
    <summarizedField>ProjectService__c.NumberOfExceptionJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>