force-app/main/default/objects/Project__c/fields/NumberofJobsExecuted__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsExecuted__c</fullName>
    <label>Number of Jobs Executed</label>
    <summarizedField>ProjectService__c.NumberOfExecutedJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>