force-app/main/default/objects/Project__c/fields/NumberofJobsFailedQC__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsFailedQC__c</fullName>
    <label>Number of Jobs Failed QC</label>
    <summarizedField>ProjectService__c.NumberOfFailedQCJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>