force-app/main/default/objects/Project__c/fields/NumberofJobsNotCanceled__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsNotCanceled__c</fullName>
    <label>Number of Jobs Not Canceled</label>
    <summarizedField>ProjectService__c.NumberOfNotCanceledJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>