force-app/main/default/objects/Project__c/fields/NumberofJobsOpen__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsOpen__c</fullName>
    <label>Number of Jobs Open</label>
    <summarizedField>ProjectService__c.NumberOfOpenJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>