force-app/main/default/objects/Project__c/fields/NumberofJobsPending__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsPending__c</fullName>
    <label>Number of Jobs Pending</label>
    <summarizedField>ProjectService__c.NumberOfPendingJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>