force-app/main/default/objects/Project__c/fields/NumberofJobsReported__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsReported__c</fullName>
    <label>Number of Jobs Reported</label>
    <summarizedField>ProjectService__c.NumberOfReportedJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>