force-app/main/default/objects/Project__c/fields/NumberofJobsRescheduled__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsRescheduled__c</fullName>
    <label>Number of Jobs Rescheduled</label>
    <summarizedField>ProjectService__c.NumberofJobsRescheduled__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>