force-app/main/default/objects/Project__c/fields/NumberofJobsScheduled__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsScheduled__c</fullName>
    <label>Number of Jobs Scheduled</label>
    <summarizedField>ProjectService__c.NumberOfScheduledJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>