force-app/main/default/objects/Project__c/fields/NumberofJobsStarted__c.field-meta.xml
<CustomField>
    <fullName>NumberofJobsStarted__c</fullName>
    <label>Number of Jobs Started</label>
    <summarizedField>ProjectService__c.NumberOfStartedJobs__c</summarizedField>
    <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>