force-app/main/default/objects/Project__c/fields/OneHubRetailerId__c.field-meta.xml
<CustomField>
    <fullName>OneHubRetailerId__c</fullName>
    <description>A field that indicates the ID number of the OneHub retailer.</description>
    <inlineHelpText>The ID number of the OneHub retailer.</inlineHelpText>
    <label>OneHub Retailer Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>