force-app/main/default/objects/Project__c/fields/OperationsTitle__c.field-meta.xml
<CustomField>
    <fullName>OperationsTitle__c</fullName>
    <description>A more descriptive project title that provides more information to the field about the project.</description>
    <inlineHelpText>This title is visible to downstream execution systems.</inlineHelpText>
    <label>Operations Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>