force-app/main/default/objects/Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A search field that indicates the name of the opportunity for the Project.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>