force-app/main/default/objects/Project__c/fields/OriginID__c.field-meta.xml
<CustomField>
    <fullName>OriginID__c</fullName>
    <description>A field that indicates the ID number for the origin of the Project.</description>
    <externalId>true</externalId>
    <label>Origin ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>