force-app/main/default/objects/Project__c/fields/OutofCycleFulfillment__c.field-meta.xml
<CustomField>
    <fullName>OutofCycleFulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Cycle Fulfillment</label>
    <type>Checkbox</type>
</CustomField>