force-app/main/default/objects/Project__c/fields/OutofCycleFulfillmentRequest__c.field-meta.xml
<CustomField>
    <fullName>OutofCycleFulfillmentRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Cycle Fulfillment Request</label>
    <type>Checkbox</type>
</CustomField>