force-app/main/default/objects/Project__c/fields/OverrideAccessLastUpdated__c.field-meta.xml
<CustomField>
    <fullName>OverrideAccessLastUpdated__c</fullName>
    <label>Override Access Last Updated</label>
    <type>DateTime</type>
</CustomField>