force-app/main/default/objects/Project__c/fields/OverrideAccountAndServiceAccess__c.field-meta.xml
<CustomField>
    <fullName>OverrideAccountAndServiceAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Account And Service Access</label>
    <type>Checkbox</type>
</CustomField>