force-app/main/default/objects/Project__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>A field that indicates the ID number of the Owner of the Project.</description>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID number of the owner of the project.</inlineHelpText>
    <label>Owner Id</label>
    <type>Text</type>
</CustomField>