force-app/main/default/objects/Project__c/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <description>A field that indicates the name of the Owner of the Project.</description>
    <formula>Owner:User.FirstName + &#39; &#39; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the owner of the project.</inlineHelpText>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>